fix(docs): rm main body scrollbar
Resolves #1399

--- a/docs/src/components/frame/frame.module.css
+++ b/docs/src/components/frame/frame.module.css
@@ -55,10 +55,8 @@
 }
 
 .main {
-  overflow: auto;
   flex: 0 1 auto;
   margin: 0 auto;
   max-width: 1000px;
   padding: var(--psLayoutSpacingMedium) var(--psLayoutSpacingXLarge);
 }
-
